# B-OCL-Interpreter

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  guidelines.md  recap-grammar-fix.md  requirements.txt  setup.bat  setup.cfg
bocl/: Evaluator.py  OCLWrapper.py  evaluator.py  ocl_wrapper.py  visitor.py
docs/source/: about.rst  api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  releases.rst
docs/source/api/: api_B-OCL.rst  api_BOCL.rst  api_buml.rst
docs/source/api/evaluator/: evaluator.rst  wrapper.rst
docs/source/examples/: how_to_define_new_constraints.rst  library_example.rst  object_example.rst  researcher.rst
docs/source/releases/: v0.1.0.rst  v0.2.0.rst  v0.3.0.rst  v0.3.1.rst  v1.0.0.rst  v1.0.1.rst
models/: library_object.py  researcher_object.py  team_player_object.py
src/: Evaluator.py  OCLWrapper.py
test/: ocl_interpreter_library.py  ocl_interpreter_local.py  ocl_interpreter_test_library.py  ocl_interpreter_test_researcher.py  ocl_interpreter_test_team.py  test_grammar_issues.py
