[metadata]
name = bocl
version = 0.2.0
author = Luxembourg Institute of Science and Technology
description = B-OCL
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://b-ocl-interpreter.readthedocs.io/en/latest/
    Source Code = https://github.com/BESSER-PEARL/B-OCL-Interpreter
    Bug Tracker = https://github.com/BESSER-PEARL/B-OCL-Interpreter/issues
keywords = uml, code generation, python
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires = file: requirements.txt
packages=find:

[options.package_data]
* = *.j2